messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    app: django-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-blue
  template:
    metadata:
      labels:
        app: django-blue
    spec:
      containers:
        - name: django-container
          image: your-dockerhub-username/django-messaging:2.0  # ⬅ updated image tag
          ports:
            - containerPort: 8000
